improved styling for mobile navbar and fixed issue of overlapping buttons that was preventing clicking on home link for small screens

--- a/client_side/web-app/src/components/Navbar.css
+++ b/client_side/web-app/src/components/Navbar.css
@@ -56,10 +56,13 @@
         height: fit-content;
         overflow: hidden;
         box-sizing: border-box;
-        box-shadow: inset 0 -10px 20px -10px #00f8aa;
+        box-shadow: inset 0 -10px 25px -10px #00f8aa;
+        padding: 0;
+        padding-bottom: 0.5em;
+        margin-bottom: 0;
     }
     .Navbar-title {
-        width: 80%;
+        width: 75%;
         padding: 0.5em;
         display: flex;
         align-content: center;
@@ -71,7 +74,9 @@
     }
     .nav-button {
         width: 100%;
-        box-shadow:inset 2px 0 35px 1px rgb(151, 74, 223);
+        /* box-shadow: inset 0px 0px 10px 0px #686dfa; */
+        font-weight: bold;
+        /* box-shadow:inset 2px 0 35px 1px rgb(151, 74, 223); */
     }
 
     .highlighted-link.nav-button a {
@@ -81,7 +86,8 @@
     .Navbar .highlighted-link:hover {
         width: 100%;
         background-color: rgb(75, 0, 125);
-        box-shadow:inset 0 -4px 25px 1px rgb(195, 155, 233);
+        /* box-shadow:inset 0 -4px 25px 1px rgb(195, 155, 233); */
+        box-shadow: inset 0px 0px 10px 0px #686dfa;
     }
     .nav-button:hover {
         color: aliceblue;
@@ -94,6 +100,12 @@
         padding: 0;
         margin-left: 0;
         padding-bottom: 1.5em;
+    }
+    .Navbar-open .Nav-links a {
+        border: 1px solid rgb(166, 169, 250);
+    }
+    .Nav-links a:hover {
+        border: 1px solid transparent;
     }
     .content {
         padding: none;
@@ -127,6 +139,7 @@
         right: 1em;
         cursor: pointer;
         background: unset;
+        width: 15%;
         /* padding: 1em; */
     }
     .Navbar .burger svg {
